--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,4 +91,162 @@ body {
 
 .backCard {
     background: #9526c3;
+    position: absolute;
+    top: 0;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+}
+
+.backCard .magneticBar {
+    height: 40px;
+    background: #000;
+    width: 100%;
+    position: absolute;
+    top: 30;
+    left: 0;
+}
+
+.backCard .data {
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+} 
+
+.backCard .data p {
+    margin-bottom: 5px;
+}
+
+.backCard .data #signature {
+    width: 70%;
+}
+
+.backCard .data #signature .signature {
+    height: 40px;
+    background: repeating-linear-gradient(skyblue 0 , skyblue 5px, orange 5px, orange 10px);
+}
+
+.backCard .data #signature .signature p {
+    line-height: 40px;
+    font-family: 'Liu Jian Mao Cao', cursive;
+    color: #000;
+    font-size: 30px;
+    padding: 0 10px;
+    text-transform: capitalize;
+}
+
+.backCard .data #cvv  {
+   width: 20%;
+}
+
+.backCard .data #cvv .cvv {
+    background: #fff;
+    height: 40px;
+    color: #000;
+    padding: 10px;
+    text-align: center;
+}
+
+
+.backCard .legend {
+    font-size: 14px;
+    line-height: 24px;
+}
+
+.backCard .bankLink {
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.containerBtn .btnOpenForm {
+   width: 50px;
+   height: 50px;
+   font-size: 20px;
+   line-height: 20px;
+   background: #2364d2;
+   color: #fff;
+   position: relative; 
+   top: -25px;
+   z-index: 3;
+   border-radius: 100%;
+   box-shadow: -5px, 4px 8px rgba(24, 56, 182, 0.4);
+   padding: 5px;
+   transition: all .2s ease;
+   border: none;
+   cursor: pointer;
+}
+
+.containerBtn .btnOpenForm:hover {
+    background: #1850b1;
+}
+
+.containerBtn .btnOpenForm:active {
+    transform: rotate(45deg);
+}
+
+.formCard {
+    background: #fff;
+    width: 100%;
+    max-width: 700px;
+    padding: 150px 30px 30px 30px;
+    border-radius: 10px;
+    position: relative;
+    top: -150px;
+    z-index: 1;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transition: clip-path .3s ease-out;
+}
+
+.formCard.active {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+.formCard label {
+    display: block;
+    color: #7d8994;
+    margin-bottom: 5px;
+    font-size: 16px;
+}
+
+.formCard input,
+.formCard select,
+.btnSubmit {
+    border: 2px solid #CED6E0;
+    font-size: 18px;
+    height: 50px;
+    width: 100%;
+    padding: 5px 12px;
+    transition: .3s ease all;
+    border-radius: 5px;
+}
+
+
+.formCard input:hover,
+.formCard select:hover {
+   border: 2px solid #93BDED;
+}
+
+.formCard input:focus,
+.formCard select:focus {
+   outline: rgb(4, 4, 4);
+   box-shadow: 1px 7px 10px -5px rgba(90, 116, 148, 0.3);
+}
+
+.formCard input {
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+.formCard .flexbox {
+    display: flex;
+    justify-content: space-between;
+}
+
+.formCard .expirationGroup {
+    width: 100%;
+}
+
+.formCard .inputCVV {
+    width: 100%;
 }
